[package]
name = "webhook-ingestion"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.2", features = ["d1"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

[profile.release]
lto = true
opt-level = "z"
strip = true
